[tool.poetry]
name = "abello"
version = "0.1.2"
description = "Poetry with Montserrat Abelló"
authors = ["Jordi Bofill <jordi.bofill@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/rajoler/abello"
repository = "https://github.com/rajoler/abello"
keywords = ["poem", "test"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment",
    "Development Status :: 1 - Planning",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: Catalan"
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
ipython = "^8.5.0"

[tool.poetry.scripts]
poem = 'abello.poems:main'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
